--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<h1>Emmanuella Akuirene<br />
 						</h1><span class="job-title">Data Analyst</span>
 						<p>Turning raw data into sharp insights with a dash of storytelling. I analyze with Excel, query with MySQL, visualize with Power BI & Tableau, and wrangle data with Python. Cloud-friendly (GCP | AWS | Azure). Let's make data dance<br />
-						</h1><a href="Resume/Emmanuella Akuirene CV.pdf" target="_blank">@Resume</a>.</p>
+						</h1><a href="#" target="_blank">@Resume</a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -163,6 +163,7 @@ Equipped with tools like Excel, MySQL, Power BI, Tableau, and Python, and confid
 	</body>
 
 </html>
+
 
 
 
